--- a/opinion-app/src/components/header/logo/logo.styles.css
+++ b/opinion-app/src/components/header/logo/logo.styles.css
@@ -19,9 +19,11 @@
 #logo-title{
     font-size: 38pt;
     line-height: 78%;
+    white-space: nowrap;
 }
 #logo-slogan{
     text-transform: uppercase;
     font-size: 20pt;
     line-height: 90%;
+    white-space: nowrap;
 }
